--- a/HealthAppSln/HealthApp/HealthApp/Views/AppointmentPage.xaml
+++ b/HealthAppSln/HealthApp/HealthApp/Views/AppointmentPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="HealthApp.Views.AppointmentPage">
+             x:Class="HealthApp.Views.AppointmentPage" BackgroundImageSource="Hospital">
 
     <StackLayout>
         <!-- Place new controls here -->
