--- a/HealthAppSln/HealthApp/HealthApp/Views/HomePage.xaml
+++ b/HealthAppSln/HealthApp/HealthApp/Views/HomePage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="HealthApp.Views.HomePage">
+             x:Class="HealthApp.Views.HomePage" BackgroundImageSource= "Doctor">
 
     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
         <Label Text="Appointment App This is an appointment app for public hospitals "
